// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="visable-for-desktop"
    >
      Expense
    </div>
    <div
      className="visablse-for-desktop"
    >
      Amount
    </div>
    <div
      className="visable-for-mobile"
    >
      Expenses
    </div>
  </div>
  <ExpensesListItem
    amount={10}
    createdAt={0}
    description="Bike"
    id="1"
    key="1"
    note=""
  />
  <ExpensesListItem
    amount={15}
    createdAt={-345600000}
    description="Rent"
    id="2"
    key="2"
    note=""
  />
  <ExpensesListItem
    amount={5}
    createdAt={345600000}
    description="ZOO"
    id="3"
    key="3"
    note=""
  />
</div>
`;

exports[`should render ExpenseList without expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="visable-for-desktop"
    >
      Expense
    </div>
    <div
      className="visablse-for-desktop"
    >
      Amount
    </div>
    <div
      className="visable-for-mobile"
    >
      Expenses
    </div>
  </div>
  <span
    className="list-item list-item--message"
  >
    No expenses
  </span>
</div>
`;
